
    Make sure /dev is mounted with sane permissions #87745 by Jordan.

    When we search /etc/fstab for /, make sure we handle mounts that have 
    UUID/LABEL info in them #90603 by Alessandro Sappia.

    Simplify rc-script error checking so we don't need a tempfile and so
    non-root users can run /etc/init.d/status #85892 by Stuart Shelton.

  12 May 2005; Mike Frysinger <vapier@gentoo.org>:

    Move pam files out of baselayout and into packages #92387.

  10 May 2005; Martin Schlemmer <azarah@gentoo.org>:

    Really fix trace_dependencies() to handle net.* services properly.

    Quiet down valid_i() if ${svcdir}/softlevel do not yet exist.

  10 May 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix get_service_index() being off by one.  Fix trace_dependencies() to also
    take "net" into regard if its a net_service.  This fixes two problems, first
    shutdown should bring services down that uses net before the net.* services,
    and secondly '/etc/init.d/net.eth0 needsme', etc should now work properly.
    All changes to sbin/rc-services.sh.

  03 May 2005; Roy Marples <uberlord@gentoo.org>:

    changed default indentation to 2 spaces to match rcscripts in functions.sh

    wpa_supplicant now stops wpa_cli before wpa_supplicant to fix a potential
    future error

  02 May 2005; Roy Marples <uberlord@gentoo.org>:

    Fix user function hooks for echoing to stdout and protecting our vars

  30 Apr 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not create the udev devices.tar.bz2 if we do not have write permissions
    for /.  Request by Donnie (spyderous) for boxes with / on NFS.

  30 Apr 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fixor column/color logic for when used in portage.

  29 Apr 2005; Mike Frysinger <vapier@gentoo.org>:

    Move crypto-loop to util-linux and skel bash files to bash.

  28 Apr 2005; Mike Frysinger <vapier@gentoo.org>:

    Export the 'service name' for init scripts #86348.
